# simple-sst-model

./: LICENSE  README.md  basic-sst.cabal
src/: Main.hs
src/Common/: Primitives.hs  SetOps.hs
src/Types/: Base.hs  LazyBDD.hs  Metafunctions.hs  NMetafunctions.hs  NSubtype.hs  Subtype.hs  Syntax.hs
test/Types/: MetafunctionTests.hs  MetafunctionsCompSpec.hs  MetafunctionsSpec.hs  NMetafunctionsSpec.hs  NSubtypeSpec.hs  SubtypeCompSpec.hs  SubtypeSpec.hs  SubtypeTests.hs
